Experiments/Parser.cpp
/*----------------------------------------------------------------------
Compiler Generator Coco/R,
Copyright (c) 1990, 2004 Hanspeter Moessenboeck, University of Linz
extended by M. Loeberbauer & A. Woess, Univ. of Linz
ported to C++ by Csaba Balazs, University of Szeged
with improvements by Pat Terry, Rhodes University

This program is free software; you can redistribute it and/or modify it 
under the terms of the GNU General Public License as published by the 
Free Software Foundation; either version 2, or (at your option) any 
later version.

This program is distributed in the hope that it will be useful, but 
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
for more details.

You should have received a copy of the GNU General Public License along 
with this program; if not, write to the Free Software Foundation, Inc., 
59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

As an exception, it is allowed to write an extension of Coco/R that is
used as a plugin in non-free software.

If not otherwise stated, any source code generated by Coco/R (other than 
Coco/R itself) does not fall under the GNU General Public License.
-----------------------------------------------------------------------*/


#include <wchar.h>
#include "Parser.h"
#include "Scanner.h"




void Parser::SynErr(int n) {
	if (errDist >= minErrDist) errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t* msg) {
	if (errDist >= minErrDist) errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::Get() {
	for (;;) {
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT) { ++errDist; break; }

		if (dummyToken != t) {
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n) {
	if (la->kind==n) Get(); else { SynErr(n); }
}

void Parser::ExpectWeak(int n, int follow) {
	if (la->kind == n) Get();
	else {
		SynErr(n);
		while (!StartOf(follow)) Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol) {
	if (la->kind == n) {Get(); return true;}
	else if (StartOf(repFol)) {return false;}
	else {
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0))) {
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::number() {
		if (la->kind == _integer) {
			Get();
		} else if (la->kind == _real) {
			Get();
		} else SynErr(67);
}

void Parser::Module() {
		Expect(6 /* "MODULE" */);
		Expect(_ident);
		Expect(7 /* ";" */);
		if (la->kind == 11 /* "IMPORT" */) {
			ImportList();
		}
		DeclSeq();
		if (la->kind == 8 /* "BEGIN" */) {
			Get();
			StatementSeq();
		}
		Expect(9 /* "END" */);
		Expect(_ident);
		Expect(10 /* "." */);
}

void Parser::ImportList() {
		Expect(11 /* "IMPORT" */);
		if (la->kind == _ident) {
			Get();
			Expect(12 /* ":=" */);
		}
		Expect(_ident);
		while (la->kind == 13 /* "," */) {
			Get();
			if (la->kind == _ident) {
				Get();
				Expect(12 /* ":=" */);
			}
			Expect(_ident);
		}
		Expect(7 /* ";" */);
}

void Parser::DeclSeq() {
		while (la->kind == 14 /* "CONST" */ || la->kind == 15 /* "TYPE" */ || la->kind == 16 /* "VAR" */) {
			if (la->kind == 14 /* "CONST" */) {
				Get();
				while (la->kind == _ident) {
					ConstDecl();
					Expect(7 /* ";" */);
				}
			} else if (la->kind == 15 /* "TYPE" */) {
				Get();
				while (la->kind == _ident) {
					TypeDecl();
					Expect(7 /* ";" */);
				}
			} else {
				Get();
				while (la->kind == _ident) {
					VarDecl();
					Expect(7 /* ";" */);
				}
			}
		}
		while (la->kind == 19 /* "PROCEDURE" */) {
			if (la->kind == 19 /* "PROCEDURE" */) {
				ProcDecl();
				Expect(7 /* ";" */);
			} else {
				ForwardDecl();
				Expect(7 /* ";" */);
			}
		}
}

void Parser::StatementSeq() {
		Statement();
		while (la->kind == 7 /* ";" */) {
			Get();
			Statement();
		}
}

void Parser::ConstDecl() {
		IdentDef();
		Expect(17 /* "=" */);
		ConstExpr();
}

void Parser::TypeDecl() {
		IdentDef();
		Expect(17 /* "=" */);
		Type();
}

void Parser::VarDecl() {
		IdentList();
		Expect(18 /* ":" */);
		Type();
}

void Parser::ProcDecl() {
		Expect(19 /* "PROCEDURE" */);
		if (la->kind == 21 /* "(" */) {
			Receiver();
		}
		IdentDef();
		if (la->kind == 21 /* "(" */) {
			FormalPars();
		}
		Expect(7 /* ";" */);
		DeclSeq();
		if (la->kind == 8 /* "BEGIN" */) {
			Get();
			StatementSeq();
		}
		Expect(9 /* "END" */);
		Expect(_ident);
}

void Parser::ForwardDecl() {
		Expect(19 /* "PROCEDURE" */);
		Expect(20 /* "^" */);
		if (la->kind == 21 /* "(" */) {
			Receiver();
		}
		IdentDef();
		if (la->kind == 21 /* "(" */) {
			FormalPars();
		}
}

void Parser::IdentDef() {
		Expect(_ident);
		if (la->kind == 46 /* "-" */ || la->kind == 59 /* "*" */) {
			if (la->kind == 59 /* "*" */) {
				Get();
			} else {
				Get();
			}
		}
}

void Parser::ConstExpr() {
		Expr();
}

void Parser::Type() {
		if (la->kind == _ident) {
			Qualident();
		} else if (la->kind == 23 /* "ARRAY" */) {
			Get();
			if (StartOf(1)) {
				ConstExpr();
				while (la->kind == 13 /* "," */) {
					Get();
					ConstExpr();
				}
			}
			Expect(24 /* "OF" */);
			Type();
		} else if (la->kind == 25 /* "RECORD" */) {
			Get();
			if (la->kind == 21 /* "(" */) {
				Get();
				Qualident();
				Expect(22 /* ")" */);
			}
			FieldList();
			while (la->kind == 7 /* ";" */) {
				Get();
				FieldList();
			}
			Expect(9 /* "END" */);
		} else if (la->kind == 26 /* "POINTER" */) {
			Get();
			Expect(27 /* "TO" */);
			Type();
		} else if (la->kind == 19 /* "PROCEDURE" */) {
			Get();
			if (la->kind == 21 /* "(" */) {
				FormalPars();
			}
		} else SynErr(68);
}

void Parser::IdentList() {
		IdentDef();
		while (la->kind == 13 /* "," */) {
			Get();
			IdentDef();
		}
}

void Parser::Receiver() {
		Expect(21 /* "(" */);
		if (la->kind == 16 /* "VAR" */) {
			Get();
		}
		Expect(_ident);
		Expect(18 /* ":" */);
		Expect(_ident);
		Expect(22 /* ")" */);
}

void Parser::FormalPars() {
		Expect(21 /* "(" */);
		if (la->kind == _ident || la->kind == 16 /* "VAR" */) {
			FPSection();
			while (la->kind == 7 /* ";" */) {
				Get();
				FPSection();
			}
		}
		Expect(22 /* ")" */);
		if (la->kind == 18 /* ":" */) {
			Get();
			Qualident();
		}
}

void Parser::FPSection() {
		if (la->kind == 16 /* "VAR" */) {
			Get();
		}
		Expect(_ident);
		while (la->kind == 13 /* "," */) {
			Get();
			Expect(_ident);
		}
		Expect(18 /* ":" */);
		Type();
}

void Parser::Qualident() {
		if (la->kind == _ident) {
			Get();
			Expect(10 /* "." */);
		}
		Expect(_ident);
}

void Parser::FieldList() {
		if (la->kind == _ident) {
			IdentList();
			Expect(18 /* ":" */);
			Type();
		}
}

void Parser::Statement() {
		if (StartOf(2)) {
			if (la->kind == _ident) {
				Designator();
				while (la->kind == 13 /* "," */) {
					Get();
					Designator();
				}
				Expect(12 /* ":=" */);
				Expr();
			} else if (la->kind == _ident) {
				Designator();
				if (la->kind == 21 /* "(" */) {
					Get();
					if (StartOf(1)) {
						ExprList();
					}
					Expect(22 /* ")" */);
				}
			} else if (la->kind == 28 /* "IF" */) {
				Get();
				Expr();
				Expect(29 /* "THEN" */);
				StatementSeq();
				while (la->kind == 30 /* "ELSIF" */) {
					Get();
					Expr();
					Expect(29 /* "THEN" */);
					StatementSeq();
				}
				if (la->kind == 31 /* "ELSE" */) {
					Get();
					StatementSeq();
				}
				Expect(9 /* "END" */);
			} else if (la->kind == 32 /* "CASE" */) {
				Get();
				Expr();
				Expect(24 /* "OF" */);
				Case();
				while (la->kind == 33 /* "|" */) {
					Get();
					Case();
				}
				if (la->kind == 31 /* "ELSE" */) {
					Get();
					StatementSeq();
				}
				Expect(9 /* "END" */);
			} else if (la->kind == 34 /* "WHILE" */) {
				Get();
				Expr();
				Expect(35 /* "DO" */);
				StatementSeq();
				Expect(9 /* "END" */);
			} else if (la->kind == 36 /* "REPEAT" */) {
				Get();
				StatementSeq();
				Expect(37 /* "UNTIL" */);
				Expr();
			} else if (la->kind == 38 /* "FOR" */) {
				Get();
				Expect(_ident);
				Expect(12 /* ":=" */);
				Expr();
				Expect(27 /* "TO" */);
				Expr();
				if (la->kind == 39 /* "BY" */) {
					Get();
					ConstExpr();
				}
				Expect(35 /* "DO" */);
				StatementSeq();
				Expect(9 /* "END" */);
			} else if (la->kind == 40 /* "LOOP" */) {
				Get();
				StatementSeq();
				Expect(9 /* "END" */);
			} else if (la->kind == 41 /* "WITH" */) {
				Get();
				Guard();
				Expect(35 /* "DO" */);
				StatementSeq();
				while (la->kind == 33 /* "|" */) {
					Get();
					Guard();
					Expect(35 /* "DO" */);
					StatementSeq();
				}
				if (la->kind == 31 /* "ELSE" */) {
					Get();
					StatementSeq();
				}
				Expect(9 /* "END" */);
			} else if (la->kind == 42 /* "EXIT" */) {
				Get();
			} else {
				Get();
				if (StartOf(1)) {
					Expr();
					while (la->kind == 13 /* "," */) {
						Get();
						Expr();
					}
				}
			}
		}
}

void Parser::Designator() {
		Qualident();
		while (StartOf(3)) {
			if (la->kind == 10 /* "." */) {
				Get();
				Expect(_ident);
			} else if (la->kind == 64 /* "[" */) {
				Get();
				ExprList();
				Expect(65 /* "]" */);
			} else if (la->kind == 20 /* "^" */) {
				Get();
			} else {
				Get();
				Qualident();
				Expect(22 /* ")" */);
			}
		}
}

void Parser::Expr() {
		SimpleExpr();
		if (StartOf(4)) {
			Relation();
			SimpleExpr();
		}
}

void Parser::ExprList() {
		Expr();
		while (la->kind == 13 /* "," */) {
			Get();
			Expr();
		}
}

void Parser::Case() {
		if (StartOf(1)) {
			CaseLabels();
			while (la->kind == 13 /* "," */) {
				Get();
				CaseLabels();
			}
			Expect(18 /* ":" */);
			StatementSeq();
		}
}

void Parser::Guard() {
		Qualident();
		Expect(18 /* ":" */);
		Qualident();
}

void Parser::CaseLabels() {
		ConstExpr();
		if (la->kind == 44 /* ".." */) {
			Get();
			ConstExpr();
		}
}

void Parser::SimpleExpr() {
		if (la->kind == 45 /* "+" */ || la->kind == 46 /* "-" */) {
			if (la->kind == 45 /* "+" */) {
				Get();
			} else {
				Get();
			}
		}
		Term();
		while (la->kind == 45 /* "+" */ || la->kind == 46 /* "-" */ || la->kind == 58 /* "OR" */) {
			AddOp();
			Term();
		}
}

void Parser::Relation() {
		switch (la->kind) {
		case 17 /* "=" */: {
			Get();
			break;
		}
		case 51 /* "#" */: {
			Get();
			break;
		}
		case 52 /* "<" */: {
			Get();
			break;
		}
		case 53 /* "<=" */: {
			Get();
			break;
		}
		case 54 /* ">" */: {
			Get();
			break;
		}
		case 55 /* ">=" */: {
			Get();
			break;
		}
		case 56 /* "IN" */: {
			Get();
			break;
		}
		case 57 /* "IS" */: {
			Get();
			break;
		}
		default: SynErr(69); break;
		}
}

void Parser::Term() {
		Factor();
		while (StartOf(5)) {
			MulOp();
			Factor();
		}
}

void Parser::AddOp() {
		if (la->kind == 45 /* "+" */) {
			Get();
		} else if (la->kind == 46 /* "-" */) {
			Get();
		} else if (la->kind == 58 /* "OR" */) {
			Get();
		} else SynErr(70);
}

void Parser::Factor() {
		switch (la->kind) {
		case _ident: {
			Designator();
			if (la->kind == 21 /* "(" */) {
				Get();
				if (StartOf(1)) {
					ExprList();
				}
				Expect(22 /* ")" */);
			}
			break;
		}
		case _integer: case _real: {
			number();
			break;
		}
		case _character: {
			Get();
			break;
		}
		case _string: {
			Get();
			break;
		}
		case 47 /* "NIL" */: {
			Get();
			break;
		}
		case 49 /* "{" */: {
			Set();
			break;
		}
		case 21 /* "(" */: {
			Get();
			Expr();
			Expect(22 /* ")" */);
			break;
		}
		case 48 /* "~" */: {
			Get();
			Factor();
			break;
		}
		default: SynErr(71); break;
		}
}

void Parser::MulOp() {
		if (la->kind == 59 /* "*" */) {
			Get();
		} else if (la->kind == 60 /* "/" */) {
			Get();
		} else if (la->kind == 61 /* "DIV" */) {
			Get();
		} else if (la->kind == 62 /* "MOD" */) {
			Get();
		} else if (la->kind == 63 /* "&" */) {
			Get();
		} else SynErr(72);
}

void Parser::Set() {
		Expect(49 /* "{" */);
		if (StartOf(1)) {
			Element();
			while (la->kind == 13 /* "," */) {
				Get();
				Element();
			}
		}
		Expect(50 /* "}" */);
}

void Parser::Element() {
		Expr();
		if (la->kind == 44 /* ".." */) {
			Get();
			Expr();
		}
}

void Parser::TNOO() {
		Module();
}




// If the user declared a method Init and a mehtod Destroy they should
// be called in the contructur and the destructor respctively.
//
// The following templates are used to recognize if the user declared
// the methods Init and Destroy.

template<typename T>
struct ParserInitExistsRecognizer {
	template<typename U, void (U::*)() = &U::Init>
	struct ExistsIfInitIsDefinedMarker{};

	struct InitIsMissingType {
		char dummy1;
	};
	
	struct InitExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static InitIsMissingType is_here(...);

	// exist only if ExistsIfInitIsDefinedMarker is defined
	template<typename U>
	static InitExistsType is_here(ExistsIfInitIsDefinedMarker<U>*);

	enum { InitExists = (sizeof(is_here<T>(NULL)) == sizeof(InitExistsType)) };
};

template<typename T>
struct ParserDestroyExistsRecognizer {
	template<typename U, void (U::*)() = &U::Destroy>
	struct ExistsIfDestroyIsDefinedMarker{};

	struct DestroyIsMissingType {
		char dummy1;
	};
	
	struct DestroyExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static DestroyIsMissingType is_here(...);

	// exist only if ExistsIfDestroyIsDefinedMarker is defined
	template<typename U>
	static DestroyExistsType is_here(ExistsIfDestroyIsDefinedMarker<U>*);

	enum { DestroyExists = (sizeof(is_here<T>(NULL)) == sizeof(DestroyExistsType)) };
};

// The folloing templates are used to call the Init and Destroy methods if they exist.

// Generic case of the ParserInitCaller, gets used if the Init method is missing
template<typename T, bool = ParserInitExistsRecognizer<T>::InitExists>
struct ParserInitCaller {
	static void CallInit(T *t) {
		// nothing to do
	}
};

// True case of the ParserInitCaller, gets used if the Init method exists
template<typename T>
struct ParserInitCaller<T, true> {
	static void CallInit(T *t) {
		t->Init();
	}
};

// Generic case of the ParserDestroyCaller, gets used if the Destroy method is missing
template<typename T, bool = ParserDestroyExistsRecognizer<T>::DestroyExists>
struct ParserDestroyCaller {
	static void CallDestroy(T *t) {
		// nothing to do
	}
};

// True case of the ParserDestroyCaller, gets used if the Destroy method exists
template<typename T>
struct ParserDestroyCaller<T, true> {
	static void CallDestroy(T *t) {
		t->Destroy();
	}
};

void Parser::Parse() {
	t = NULL;
	la = dummyToken = new Token();
	la->val = coco_string_create(L"Dummy Token");
	Get();
	TNOO();
	Expect(0);
}

Parser::Parser(Scanner *scanner) {
	maxT = 66;

	ParserInitCaller<Parser>::CallInit(this);
	dummyToken = NULL;
	t = la = NULL;
	minErrDist = 2;
	errDist = minErrDist;
	this->scanner = scanner;
	errors = new Errors();
}

bool Parser::StartOf(int s) {
	const bool T = true;
	const bool x = false;

	static bool set[6][68] = {
		{T,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x},
		{x,T,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,T,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x},
		{x,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, T,x,x,x, T,x,T,x, T,x,T,x, T,T,T,T, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x},
		{x,x,x,x, x,x,x,x, x,x,T,x, x,x,x,x, x,x,x,x, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, T,x,x,x},
		{x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,T, T,T,T,T, T,T,x,x, x,x,x,x, x,x,x,x},
		{x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,T, T,T,T,T, x,x,x,x}
	};



	return set[s][la->kind];
}

Parser::~Parser() {
	ParserDestroyCaller<Parser>::CallDestroy(this);
	delete errors;
	delete dummyToken;
}

Errors::Errors() {
	count = 0;
}

void Errors::SynErr(int line, int col, int n) {
	wchar_t* s;
	switch (n) {
			case 0: s = coco_string_create(L"EOF expected"); break;
			case 1: s = coco_string_create(L"ident expected"); break;
			case 2: s = coco_string_create(L"integer expected"); break;
			case 3: s = coco_string_create(L"real expected"); break;
			case 4: s = coco_string_create(L"character expected"); break;
			case 5: s = coco_string_create(L"string expected"); break;
			case 6: s = coco_string_create(L"\"MODULE\" expected"); break;
			case 7: s = coco_string_create(L"\";\" expected"); break;
			case 8: s = coco_string_create(L"\"BEGIN\" expected"); break;
			case 9: s = coco_string_create(L"\"END\" expected"); break;
			case 10: s = coco_string_create(L"\".\" expected"); break;
			case 11: s = coco_string_create(L"\"IMPORT\" expected"); break;
			case 12: s = coco_string_create(L"\":=\" expected"); break;
			case 13: s = coco_string_create(L"\",\" expected"); break;
			case 14: s = coco_string_create(L"\"CONST\" expected"); break;
			case 15: s = coco_string_create(L"\"TYPE\" expected"); break;
			case 16: s = coco_string_create(L"\"VAR\" expected"); break;
			case 17: s = coco_string_create(L"\"=\" expected"); break;
			case 18: s = coco_string_create(L"\":\" expected"); break;
			case 19: s = coco_string_create(L"\"PROCEDURE\" expected"); break;
			case 20: s = coco_string_create(L"\"^\" expected"); break;
			case 21: s = coco_string_create(L"\"(\" expected"); break;
			case 22: s = coco_string_create(L"\")\" expected"); break;
			case 23: s = coco_string_create(L"\"ARRAY\" expected"); break;
			case 24: s = coco_string_create(L"\"OF\" expected"); break;
			case 25: s = coco_string_create(L"\"RECORD\" expected"); break;
			case 26: s = coco_string_create(L"\"POINTER\" expected"); break;
			case 27: s = coco_string_create(L"\"TO\" expected"); break;
			case 28: s = coco_string_create(L"\"IF\" expected"); break;
			case 29: s = coco_string_create(L"\"THEN\" expected"); break;
			case 30: s = coco_string_create(L"\"ELSIF\" expected"); break;
			case 31: s = coco_string_create(L"\"ELSE\" expected"); break;
			case 32: s = coco_string_create(L"\"CASE\" expected"); break;
			case 33: s = coco_string_create(L"\"|\" expected"); break;
			case 34: s = coco_string_create(L"\"WHILE\" expected"); break;
			case 35: s = coco_string_create(L"\"DO\" expected"); break;
			case 36: s = coco_string_create(L"\"REPEAT\" expected"); break;
			case 37: s = coco_string_create(L"\"UNTIL\" expected"); break;
			case 38: s = coco_string_create(L"\"FOR\" expected"); break;
			case 39: s = coco_string_create(L"\"BY\" expected"); break;
			case 40: s = coco_string_create(L"\"LOOP\" expected"); break;
			case 41: s = coco_string_create(L"\"WITH\" expected"); break;
			case 42: s = coco_string_create(L"\"EXIT\" expected"); break;
			case 43: s = coco_string_create(L"\"RETURN\" expected"); break;
			case 44: s = coco_string_create(L"\"..\" expected"); break;
			case 45: s = coco_string_create(L"\"+\" expected"); break;
			case 46: s = coco_string_create(L"\"-\" expected"); break;
			case 47: s = coco_string_create(L"\"NIL\" expected"); break;
			case 48: s = coco_string_create(L"\"~\" expected"); break;
			case 49: s = coco_string_create(L"\"{\" expected"); break;
			case 50: s = coco_string_create(L"\"}\" expected"); break;
			case 51: s = coco_string_create(L"\"#\" expected"); break;
			case 52: s = coco_string_create(L"\"<\" expected"); break;
			case 53: s = coco_string_create(L"\"<=\" expected"); break;
			case 54: s = coco_string_create(L"\">\" expected"); break;
			case 55: s = coco_string_create(L"\">=\" expected"); break;
			case 56: s = coco_string_create(L"\"IN\" expected"); break;
			case 57: s = coco_string_create(L"\"IS\" expected"); break;
			case 58: s = coco_string_create(L"\"OR\" expected"); break;
			case 59: s = coco_string_create(L"\"*\" expected"); break;
			case 60: s = coco_string_create(L"\"/\" expected"); break;
			case 61: s = coco_string_create(L"\"DIV\" expected"); break;
			case 62: s = coco_string_create(L"\"MOD\" expected"); break;
			case 63: s = coco_string_create(L"\"&\" expected"); break;
			case 64: s = coco_string_create(L"\"[\" expected"); break;
			case 65: s = coco_string_create(L"\"]\" expected"); break;
			case 66: s = coco_string_create(L"??? expected"); break;
			case 67: s = coco_string_create(L"invalid number"); break;
			case 68: s = coco_string_create(L"invalid Type"); break;
			case 69: s = coco_string_create(L"invalid Relation"); break;
			case 70: s = coco_string_create(L"invalid AddOp"); break;
			case 71: s = coco_string_create(L"invalid Factor"); break;
			case 72: s = coco_string_create(L"invalid MulOp"); break;

		default:
		{
			wchar_t format[20];
			coco_swprintf(format, 20, L"error %d", n);
			s = coco_string_create(format);
		}
		break;
	}
	wprintf(L"-- line %d col %d: %ls\n", line, col, s);
	coco_string_delete(s);
	count++;
}

void Errors::Error(int line, int col, const wchar_t *s) {
	wprintf(L"-- line %d col %d: %ls\n", line, col, s);
	count++;
}

void Errors::Warning(int line, int col, const wchar_t *s) {
	wprintf(L"-- line %d col %d: %ls\n", line, col, s);
}

void Errors::Warning(const wchar_t *s) {
	wprintf(L"%ls\n", s);
}

void Errors::Exception(const wchar_t* s) {
	wprintf(L"%ls", s); 
	exit(1);
}


